@@ -51,6 +51,7 @@ unsigned short	SimFocuser::current() {
 	double	now = simtime();
 	double	timepast = now - lastset;
 	double	delta = (double)_value - (double)target;
+//debug(LOG_DEBUG, DEBUG_LOG, 0, "delta: %f, timepast: %f", delta, timepast);
 	if (fabs(delta / 1000.) > timepast) {
 		_value -= timepast * delta;
 		lastset = now;
